--- a/ios/reactnativecoffeeshop/Info.plist
+++ b/ios/reactnativecoffeeshop/Info.plist
@@ -28,7 +28,7 @@
         <key>CFBundleURLSchemes</key>
         <array>
           <string>myapp</string>
-          <string>com.anonymous.reactnativemyapp</string>
+          <string>com.anonymous.reactnativecoffeeshop</string>
         </array>
       </dict>
     </array>
