--- a/ios/reactnativecoffeeshop.xcodeproj/xcshareddata/xcschemes/reactnativecoffeeshop.xcscheme
+++ b/ios/reactnativecoffeeshop.xcodeproj/xcshareddata/xcschemes/reactnativecoffeeshop.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "reactnativemyapp.app"
-               BlueprintName = "reactnativemyapp"
-               ReferencedContainer = "container:reactnativemyapp.xcodeproj">
+               BuildableName = "reactnativecoffeeshop.app"
+               BlueprintName = "reactnativecoffeeshop"
+               ReferencedContainer = "container:reactnativecoffeeshop.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "reactnativemyappTests.xctest"
-               BlueprintName = "reactnativemyappTests"
-               ReferencedContainer = "container:reactnativemyapp.xcodeproj">
+               BuildableName = "reactnativecoffeeshopTests.xctest"
+               BlueprintName = "reactnativecoffeeshopTests"
+               ReferencedContainer = "container:reactnativecoffeeshop.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "reactnativemyapp.app"
-            BlueprintName = "reactnativemyapp"
-            ReferencedContainer = "container:reactnativemyapp.xcodeproj">
+            BuildableName = "reactnativecoffeeshop.app"
+            BlueprintName = "reactnativecoffeeshop"
+            ReferencedContainer = "container:reactnativecoffeeshop.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "reactnativemyapp.app"
-            BlueprintName = "reactnativemyapp"
-            ReferencedContainer = "container:reactnativemyapp.xcodeproj">
+            BuildableName = "reactnativecoffeeshop.app"
+            BlueprintName = "reactnativecoffeeshop"
+            ReferencedContainer = "container:reactnativecoffeeshop.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
